--- a/src/main/resources/templates/Employee/dash.html
+++ b/src/main/resources/templates/Employee/dash.html
@@ -24,8 +24,7 @@
     <div class="sidebar">
         <div class="heading">
             <h2>HR DIVE</h2>
-            <button id="chevron" onclick="toggleMenu()" style="background: transparent; border: none;"><i
-                    class="fa-solid fa-chevron-left"></i></button>
+
         </div>
         <h3>Menu</h3>
         <div class="icons">
@@ -44,11 +43,12 @@
             <i class="fa-solid fa-calendar fa-lg"></i><a href="/meetings">Meetings</a>
         </div>
 
-        <div class="icons">
-            <i class="fa-solid fa-comments fa-lg"></i><a href="/feedbacks">Feedbacks and Complaints</a>
-        </div>
+
         <div class="icons">
             <i class="fa-solid fa-bullhorn fa-lg"></i><a href="/announcements">Announcements</a>
+        </div>
+        <div class="icons">
+        <i class="fa-solid fa-gear fa-lg"></i> <a href="/reset-password">Password</a>
         </div>
         <div class="icons">
             <i class="fa-solid fa-calendar-check fa-lg"></i><a href="/leave">Leave Request</a>
@@ -73,7 +73,9 @@
             <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etasks">Tasks</a>
 
         </div>
-
+        <div class="icons">
+            <i class="fa-solid fa-comments fa-lg"></i><a href="/help&support">Help & Support</a>
+        </div>
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
 
