--- a/src/main/resources/templates/Employee/profile-management.html
+++ b/src/main/resources/templates/Employee/profile-management.html
@@ -42,9 +42,7 @@
             <i class="fa-solid fa-calendar fa-lg"></i><a href="/meetings">Meetings</a>
         </div>
 
-        <div class="icons">
-            <i class="fa-solid fa-comments fa-lg"></i><a href="/feedbacks">Feedbacks and Complaints</a>
-        </div>
+
         <div class="icons">
             <i class="fa-solid fa-bullhorn fa-lg"></i><a href="/announcements">Announcements</a>
         </div>
@@ -71,13 +69,13 @@
             <a class="hover:text-[#4682B4]    hover:cursor-pointer text-wrap" href="/etask">Tasks</a>
 
         </div>
-
+        <div class="icons">
+            <i class="fa-solid fa-comments fa-lg"></i><a href="/help&support">Help & Support</a>
+        </div>
         <div class="icons">
             <i class="fa-solid fa-gear fa-lg"></i> <a href="/security">Settings</a>
         </div>
-        <div class="icons">
-            <i class="fa-solid fa-headphones fa-lg"></i><a href="/">Help & Support</a>
-        </div>
+
     </div>
 
     <!-- Navbar -->
